--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "browserslist": "^4.24.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dayjs": "^1.11.13",
+    "firebase": "^11.6.1",
+    "firebase-admin": "^13.3.0",
     "lucide-react": "^0.503.0",
     "next": "15.3.1",
     "next-themes": "^0.4.6",
