--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ai-sdk/google": "^1.2.14",
     "@hookform/resolvers": "^5.0.1",
     "@radix-ui/react-label": "^2.1.4",
     "@radix-ui/react-slot": "^1.2.0",
+    "@vapi-ai/web": "^2.2.7",
+    "ai": "^4.3.13",
     "autoprefixer": "^10.4.21",
     "browserslist": "^4.24.4",
     "class-variance-authority": "^0.7.1",
