--- a/package.json
+++ b/package.json
@@ -45,5 +45,8 @@
     "tailwindcss": "^4.1.4",
     "tw-animate-css": "^1.2.8",
     "typescript": "^5"
-  }
+  },
+  "resolutions": {
+  "lightningcss": "1.22.0"
+}
 }
