--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "postinstall": "npm rebuild"
+    "lint": "next lint"
+  
   },
   "dependencies": {
     "@ai-sdk/google": "^1.2.14",
