--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "@hookform/resolvers": "^5.0.1",
     "@radix-ui/react-label": "^2.1.4",
     "@radix-ui/react-slot": "^1.2.0",
+    "@tailwindcss/postcss": "^4.1.6",
     "@vapi-ai/web": "^2.2.7",
     "ai": "^4.3.13",
-    "autoprefixer": "^10.4.14",
     "browserslist": "^4.24.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -26,13 +26,11 @@
     "lucide-react": "^0.503.0",
     "next": "15.3.1",
     "next-themes": "^0.4.6",
-    "postcss": "^8.4.24",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.1",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
-    "tailwindcss": "^3.3.2",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.3"
   },
@@ -41,8 +39,11 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.3.1",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.1.6",
     "tw-animate-css": "^1.2.8",
     "typescript": "^5"
   },
